CID-45 fixed overflow issue for pull request card after reviewer summary is added

--- a/src/features/github/pull-request-card/pull-request-card.scss
+++ b/src/features/github/pull-request-card/pull-request-card.scss
@@ -4,7 +4,7 @@
     align-items: center;
 
     .pull-request-message {
-        max-width: 160px;
+        max-width: 140px;
         font-weight: 500;
         border-top-right-radius: 4px;
         border-bottom-right-radius: 4px;
@@ -59,7 +59,7 @@
 
     .reviewers-summary {
         margin-top: 1px;
-        margin-left: 7px;
+        margin-left: 10px;
         font-size: 0.9em;
         color: var(--main-font-color);
 
